# rag-chatbot-qdrant-fastapi

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
prompts/: rag.txt
src/: app.py
src/extraction/: retrieval.py
src/ingestion/: ingest.py
src/utils/: ingestion.py
utils/: ingestion.py
